statics/assets/css/my-style.css
/* Off Canvas responsive Screen */

@media only screen and (min-width: 1001px) {
    .cus-offcanvas {
        width: 60% !important;
        min-width: 400px;
    }
}

@media only screen and (max-width: 1000px) {
    .cus-offcanvas {
        width: 100% !important;
        min-width: 400px !important;
    }
}

.wizard > .steps .done a {
    color: #000000 !important;
}

.wizard > .steps .current a {
    color: #0a53be !important;
}


/* ... Off Canvas responsive Screen */
.hidden-simple {
    display: none;
}

.hidden {
    display: none !important;
}


/* Apps in Plan */
.btn-collapse {
    cursor: pointer;
}

.card {
    margin-top: 30px;
}

/* Hidden secondary slider */
.hk-sidebar-togglable {
    display: none;
}

/* color */
.cl-red {
    color: red;
}

.cl-blue {
    color: blue;
}

.cl-green {
    color: green;
}

/* field css */
.field-required {
    color: red;
    padding-left: 3px;
}

/* global class style form */
.modal-backdrop {
    /*background-color: #262a2e;*/
    position: relative;
}

.required::after {
    content: "(*)";
    color: red;
    font-size: 0.8rem;
    padding-left: 5px;
    padding-right: 5px;
}

.wrap-text {
    word-break: normal !important;
    white-space: normal !important;
}


.btn-show-hide-password {
    cursor: pointer;
    width: 17px;
    height: 17px;
}

.modal.show {
    background-color: rgba(91, 91, 91, 0.35);
}

.menu-child-icon i {
    font-size: 0.6em;
}

.icon-info {
    font-size: 0.9em;
    padding-left: 3px;
    cursor: pointer;
}

/* breadcrumb */
.breadcrumb {
    background-color: rgba(255, 255, 255, 0) !important;
}

/* filter table with inline group */
div.inline {
    float: left;
    margin-right: 10px;
}

.clearBoth {
    clear: both;
}

/*data table css */

.dataTables_paginate .paginate_button i {
    font-size: 1.2rem;
    vertical-align: -4px
}

.dataTables_paginate .paginate_button.previous i {
    margin-right: 4px;
}

.dataTables_paginate .paginate_button.next i {
    margin-left: 5px;
}

/*[type="search"] {*/
/*    outline: none;*/
/*}*/

/* show - hidden code company */
#span-code-company {
    font-size: 0.9em;
    margin-left: 1em;
    display: none;
}

.hk-menu:hover #span-code-company {
    display: inline-block !important;
}

.dropdown-menu-end {
    min-width: 280px;
}

.dataTables_paginate span {
    margin: 0 5px;
}

.dataTables_paginate span a {
    padding: 0 5px;
}

.i-red {
    color: red;
}

.i-blue {
    color: blue;
}

/* Customize CSS datatable */
.manualFilter .select2-container {
    padding-top: 0.25rem;
    padding-bottom: 0.25rem;
    /*padding-left: 0.5rem;*/
    font-size: 0.875rem;
    border-radius: 0.2rem;
}

.util-btn {
    margin-left: auto;
}

.row-custom-filter {
    margin-bottom: 0 !important;
    padding-bottom: 0 !important;
}

.dataTables_wrapper {
    margin-top: 0 !important;
    padding-top: 0 !important;
}

.dataTables_filter {
    width: 200px;
    margin-left: auto;
    justify-content: flex-end;
}

/*.dataTables_filter {*/
/*    text-align: left !important;*/
/*    width: 100%;*/
/*}*/

.remove-filter-child {
    cursor: pointer;
}

.dataTables_filter label, .dataTables_filter label input {
    /*width: 100% !important;*/
}

.dataTables_length {
    display: flex;
    align-items: center;
    height: 100%;
    padding-top: 0;
}

@media screen and (min-width: 993px) {
    .dataTables_paginate {
        justify-content: right !important;
    }

    .dataTables_info:before {
        content: "|";
        margin-right: 10px;
        margin-left: 10px;
    }
}

@media screen and (max-width: 992px) {
    .dataTables_info {
        margin-left: auto;
    }

    .dataTables_paginate {
        margin-top: 10px !important;
        justify-content: center !important;
    }
}

@media screen and (max-width: 768px) {
    .textFilter {
        display: none;
    }
}

@media screen and (max-width: 576px) {
    .dataTables_length {
        margin-top: 10px;
        justify-content: center;
    }

    .dataTables_info {
        margin-top: 10px;
        justify-content: center !important;
        margin-left: unset;
    }

    .dataTables_paginate {
        margin-top: 10px !important;
    }

    .cus-page-info {
        flex-direction: column;
    }

    .btnAddFilter .dtb-text-btn-filter {
        margin-left: 0!important;
        visibility: hidden;
        width: 0;
    }

    .btnAddFilter .dtb-icon-btn-filter {
        margin-right: 0!important;
    }
}

/* -- Customize CSS datatable */

/* button css customize */
.bg-dark-hover:hover {
    background-color: #f2f5f6;
}

/* Update some header table */
.table thead th, .table-advance thead th {
    border-bottom: 0;
}

/* -- Update some header table */

.dataTables_scrollBody::-webkit-scrollbar {
    height: 8px;
}

.dataTables_scrollBody::-webkit-scrollbar-thumb {
    background-color: #d6d9da;
    border-radius: 4px;
}

/* button upload file */
.btn-upload-force-color {
    color: #262a2e !important;
    background-color: #f2f5f6 !important;
}

/* -- button upload file */

.count_selected {
    margin-top: 1rem;
}

.dropdown.ct_toolbar-columns {
    text-align: right;
}

.select2-container--bootstrap4 .select2-selection__clear {
    padding-left: 0;
    display: flex;
    justify-content: center;
    align-items: center;
}

.custom-visible-dtb .tit_visible_tb-head{
    display: none;
}

